--- a/projeto.html
+++ b/projeto.html
@@ -5,7 +5,7 @@
 		<title>Calculadora</title>		
 		<script src="calculadora.js"></script>
 	</head>
-	<body bgcolor="beige">
+	<body bgcolor="bisque">
 		<h1>Calculadora Online</h1>
 		<input type="text" id="txtValor1">
 			<select id="operadores" onchange="ControleDeSelecao();">
